--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* @layer base {
-  body {
-    @apply bg-white dark:bg-black;
-  }
-} */
+@layer base {
+    html {
+        scroll-behavior: smooth;
+        font-family: "Roboto", sans-serif;
+    }
+
+    body {
+        @apply bg-white dark:bg-black;
+    }
+
+    ::-webkit-scrollbar {
+        width: 10px;
+        cursor: pointer;
+    }
+
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px inherit;
+        border-radius: 10px;
+        background-color: inherit;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: linear-gradient(0deg, #a29bfe, #55efc4);
+        border-radius: 10px;
+    }
+}
