--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,15 @@
     @apply bg-white dark:bg-black;
   }
 } */
+
+@layer components {
+  .card-zoom {
+    @apply hover:scale-105 transition-all ease-in-out duration-200;
+  }
+  .my-card {
+    @apply bg-[#f9f8fa] dark:bg-gray-800 rounded-md;
+  }
+  .new-line {
+    white-space: pre-wrap;
+  }
+}
